--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     </div>
 
-    <a href="contador.html" class="botao">Ir para contador</a>
+    <a href="contador.html" class="botao" target="_blank">Ir para contador</a>
     
 </body>
 </html>
