--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Explicação</title>
-
     <link rel="stylesheet" href="style1.css">
 </head>
 <body>
 
-
-
     <div>
         <h1>
-            Bem vindo ao contador de Tempo de Namoro!
+            Bem-vindo ao contador de Tempo de Namoro!
         </h1>
 
         <h2>
@@ -34,10 +31,10 @@
 
         <p><strong>Obrigado por fazer parte da nossa história. Vamos continuar contando os momentos e celebrando o amor que nos une!</strong></p>
 
+        <!-- Texto transformado em link -->
+        <p><a href="contador.html" class="botao">Ir para o contador</a></p>
 
     </div>
-
-    <a href="contador.html" class="botao" target="_blank">Ir para contador</a>
     
 </body>
 </html>
