--- a/contador.html
+++ b/contador.html
@@ -17,7 +17,18 @@
     </div>
 
 
+
+
     <p id="contador">Carregando...</p>
+
+    <div id="mensagem">
+        <h1>Para Meu Amor Infinito</h1>
+        <p>Desde o dia em que nossos caminhos se cruzaram, cada momento tem sido uma bela aventura ao seu lado. Este contador é mais do que números; é uma celebração de cada segundo, cada sorriso e cada sonho que compartilhamos.</p>
+        <p>Enquanto assistimos a este vídeo, lembramos dos momentos que tornaram nossa história tão especial. A cada dia que passa, nosso amor se fortalece e cresce, e cada instante vivido juntos é uma prova de que somos feitos um para o outro.</p>
+        <p>Obrigado por estar sempre ao meu lado, por tornar cada dia mais brilhante e por ser a pessoa incrível que você é. Vamos continuar criando memórias inesquecíveis, e que nosso amor continue a florescer por muitos e muitos anos!</p>
+        <p>Com todo o meu amor,</p>
+        <p>Alexandre</p>
+    </div>
 
     <script>
 
