--- a/contador.html
+++ b/contador.html
@@ -7,7 +7,7 @@
     <style>
         body {
             background-color: #a373c5;
-            overflow: hidden;
+            overflow: auto;
         }
         div video {
             width: 40vh;
